--- a/frontend/css/participants-style.css
+++ b/frontend/css/participants-style.css
@@ -1,22 +1,3 @@
-nav {
-  padding: 24px 0;
-  display: flex;
-  justify-content: center;
-}
-
-.container {
-  box-sizing: border-box;
-  margin: 40px auto;
-  min-width: calc(320px - 32px);
-  max-width: 375px;
-  padding: 16px;
-  font-style: 14px;
-}
-
-h1 {
-  margin-bottom: 20px;
-}
-
 .participants-list {
   display: flex; /* Keep the flex display for the list */
   flex-wrap: wrap; /* Allow wrapping */
@@ -25,34 +6,22 @@ h1 {
 }
 
 .participants-item {
-  border: 2px solid #242424;
-  border-radius: 4px;
+  border: 1px solid #a9a9a9; /* Thinner gray border */
+  border-radius: 8px; /* Rounded corners */
   padding: 16px;
   display: inline-block; /* Allow width to adapt to content */
   width: auto; /* Let it grow with the content */
   max-width: calc(100% - 16px); /* Optional: to fit within the parent */
 }
 
+/* Media Queries for Tablet and Desktop */
 @media only screen and (min-width: 768px) {
-  .container {
-    max-width: 768px;
-    padding: 40px;
-  }
-
-  h1 {
-    font-size: 48px;
-  }
-
   .participants-item {
     width: auto; /* Remove fixed width to adapt to content */
   }
 }
 
 @media only screen and (min-width: 1440px) {
-  .container {
-    max-width: 1440px;
-  }
-
   .participants-item {
     width: auto; /* Remove fixed width to adapt to content */
   }
